Handle Gemini 429 with retries and rule-based fallback (no 500s)

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,6 @@ INACTIVITY_TIMEOUT_SEC=180
 # === Mandatory final callback (GUVI) ===
 GUVI_CALLBACK_URL=https://hackathon.guvi.in/api/updateHoneyPotFinalResult
 CALLBACK_TIMEOUT_SEC=5
+
+# === Web server concurrency (reduce burst LLM calls) ===
+WEB_CONCURRENCY=1
