Implement dynamic artifact support and relax responder constraints
- Update `Intelligence` model and extractor to store runtime IOCs in `dynamicArtifacts`.
- Integrate dynamic artifacts into orchestrator context, finalization logic, and callback payloads.
- Remove `SAFE_FOR_REPHRASE` whitelist in responder to allow broader LLM rephrasing.
- Improve URL extraction regex and optimize procedural pattern matching.

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,22 @@
-# === Security ===
-API_KEY=change_me_super_secret
+# -------------------------------
+# Honeypot API - Example Env File
+# -------------------------------
 
-# === Redis / RQ ===
+# Auth
+API_KEY=changeme
+
+# Redis
 REDIS_URL=redis://localhost:6379/0
-RQ_QUEUE_NAME=callback
 
-# === Gemini (Google AI Studio key) ===
-# Get your key from https://aistudio.google.com/ ("Get API key")
-GEMINI_API_KEY=your_ai_studio_key
-# Example: gemini-2.5-flash, gemini-3-flash, etc.
-GEMINI_MODEL=gemini-2.5-flash
+# vLLM (Responder/Detector backend)
+VLLM_BASE_URL=http://localhost:8000/v1
+VLLM_API_KEY=
+VLLM_MODEL=Qwen/Qwen2.5-14B-Instruct-AWQ
 
-# === Behavior / thresholds ===
-SCAM_THRESHOLD=0.75
-MAX_CONTEXT_MESSAGES=10
+# Broken-Flow controller caps
+BF_MAX_TURNS=10
+BF_NO_PROGRESS_TURNS=3
+BF_REPEAT_LIMIT=2
 
-FINALIZE_MIN_TURNS=12
-FINALIZE_MIN_IOC_CATEGORIES=2
-INACTIVITY_TIMEOUT_SEC=180
-
-# === Mandatory final callback (GUVI) ===
-GUVI_CALLBACK_URL=https://hackathon.guvi.in/api/updateHoneyPotFinalResult
-CALLBACK_TIMEOUT_SEC=5
-
-# === Web server concurrency (reduce burst LLM calls) ===
-WEB_CONCURRENCY=1
+# RSE instruction-driven phrasing (enable LLM rephrase in responder)
+BF_LLM_REPHRASE=true
