--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,45 @@
-# -------------------------------
-# Honeypot API - Example Env File
-# -------------------------------
+# --- API ---
+# Optional API key: if empty, authentication is disabled.
+API_KEY=
 
-# Auth
-API_KEY=changeme
-
-# Redis
+# --- Redis / RQ ---
 REDIS_URL=redis://localhost:6379/0
+RQ_QUEUE_NAME=callback
 
-# vLLM (Responder/Detector backend)
-VLLM_BASE_URL=http://localhost:8000/v1
-VLLM_API_KEY=
-VLLM_MODEL=Qwen/Qwen2.5-14B-Instruct-AWQ
+# --- Detection thresholds ---
+SCAM_THRESHOLD=0.75
+MAX_CONTEXT_MESSAGES=10
 
-# Broken-Flow controller caps
+# --- Broken-flow controller knobs ---
+BF_ENABLED=true
 BF_MAX_TURNS=10
 BF_NO_PROGRESS_TURNS=3
 BF_REPEAT_LIMIT=2
+BF_SECONDARY_BOUNCE_LIMIT=1
+ALT_COOLDOWN_WINDOW=2
+ALT_SEMANTIC_WINDOW=5
+ALT_MAX_USES_IN_WINDOW=1
+OTP_PRESSURE_WINDOW=4
+OTP_PRESSURE_THRESHOLD=2
 
-# RSE instruction-driven phrasing (enable LLM rephrase in responder)
-BF_LLM_REPHRASE=true
+# --- Registry refresh / intent map ---
+REGISTRY_TTL=60
+REGISTRY_OVERRIDES_KEY=registry:overrides
+REGISTRY_DYNAMIC_KEY=registry:dynamic
+REGISTRY_INTENT_MAP_KEY=registry:intent_map
+INTENT_MAP_REFRESH_SEC=60
+
+# --- Optional: LLM rephrase ---
+BF_LLM_REPHRASE=false
+
+# --- Optional: callback (final output) ---
+GUVI_CALLBACK_URL=
+CALLBACK_TIMEOUT_SEC=5
+
+# --- Optional: vLLM ---
+VLLM_BASE_URL=
+VLLM_API_KEY=
+VLLM_MODEL=Qwen/Qwen2.5-14B-Instruct-AWQ
+VLLM_REQUEST_TIMEOUT_SEC=8.0
+VLLM_CLIENT_BUDGET_SEC=24.0
+VLLM_MAX_RETRIES=2
