--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,33 @@
+# --- Finalization & FSM ---
+FINALIZE_MIN_IOC_CATEGORIES=2
+FINALIZE_MIN_REDFLAGS=4
+FINALIZE_INACTIVITY_SECONDS=30
+FINALIZE_FORCE_ON_ESCALATION=true
+
+# --- Callback Outbox & Reliability ---
+CALLBACK_MAX_ATTEMPTS=12
+CALLBACK_BASE_DELAY_MS=1000
+CALLBACK_MAX_DELAY_MS=3600000
+CALLBACK_DLQ_TTL_DAYS=7
+CALLBACK_PAYLOAD_VERSION=1.1
+
+# --- Enhanced Extraction ---
+EXTRACTION_ID_ENABLED=true
+NO_NEW_IOC_TURNS=2
+
+# --- Sensitive Action Refusal & Budget ---
+ESCALATED_OTP_THRESHOLD=1
+NORMAL_OTP_THRESHOLD=2
+CQ_MIN_REDFLAGS=6
+CQ_NO_DUPLICATE_WINDOW=2
+
+# --- Security & Privacy ---
+LOG_RETENTION_DAYS=180
+EVIDENCE_RETENTION_DAYS=365
+ENABLE_PII_REDACTION=true
+ADMIN_RBAC_ENABLED=true
+ADMIN_API_KEY=change-me-in-prod
+
 # --- API ---
 # Optional API key: if empty, authentication is disabled.
 API_KEY=
