Implement Admin API, SLO metrics, and CI
- Add `/admin/session/{id}` and `/admin/slo` endpoints for system observability.
- Implement Redis-backed metrics for finalization and callback performance.
- Instrument orchestrator and outbox to track success rates and latency.
- Persist last callback payload to Redis for debugging.
- Add CI workflow and unit tests for admin routes.
- Make CORS origins configurable and update payload version to 1.1.

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,7 @@ CQ_MIN_REDFLAGS=6
 CQ_NO_DUPLICATE_WINDOW=2
 
 # --- Security & Privacy ---
+CORS_ORIGINS=*
 LOG_RETENTION_DAYS=180
 EVIDENCE_RETENTION_DAYS=365
 ENABLE_PII_REDACTION=true
