feat(observability): enhance admin observability and slo tracking
- Add detailed SLO metrics in `app/observability/metrics.py`.
- Add `version` field to callback outbox ledger for observability.
- Add admin documentation: `docs/admin-observability.md`, `docs/api-admin.md`.
- Update `automations/.../metadata.json` with new environment variables.
- Add new tests: `tests/test_admin_slo.py`, `tests/test_admin_session.py`, `tests/test_version_alignment.py`.
- Update existing tests to align with new metrics and payload contract.
- Fix indentation in `tests/llm/test_responder_quality.py`.
- Ensure `dynamicArtifacts` is preserved in final payload contract.
- Add CI workflow.

--- a/.env.example
+++ b/.env.example
@@ -1,76 +1,30 @@
-# --- Finalization & FSM ---
-FINALIZE_MIN_IOC_CATEGORIES=2
-FINALIZE_MIN_REDFLAGS=4
-FINALIZE_INACTIVITY_SECONDS=30
-FINALIZE_FORCE_ON_ESCALATION=true
+# === Public/API ===
+API_KEY=
+CORS_ORIGINS=https://your-dashboard.example.com
 
-# --- Callback Outbox & Reliability ---
+# === Admin/RBAC ===
+ADMIN_RBAC_ENABLED=true
+ADMIN_API_KEY=change-me-strong
+
+# === Callback Contract ===
+CALLBACK_PAYLOAD_VERSION=1.1
+STORE_LAST_CALLBACK_PAYLOAD=true
+
+# === Finalization & Outbox ===
+FINAL_OUTPUT_MODE=hybrid
+FINAL_OUTPUT_DEADLINE_SEC=8.0
+CALLBACK_TIMEOUT_SEC=5
 CALLBACK_MAX_ATTEMPTS=12
 CALLBACK_BASE_DELAY_MS=1000
 CALLBACK_MAX_DELAY_MS=3600000
-CALLBACK_DLQ_TTL_DAYS=7
-CALLBACK_PAYLOAD_VERSION=1.1
 
-# --- Enhanced Extraction ---
-EXTRACTION_ID_ENABLED=true
-NO_NEW_IOC_TURNS=2
+# === SLO Targets / Window ===
+SLO_WINDOW_SECONDS=900
+TARGET_FINALIZE_P95_SEC=5
+TARGET_CALLBACK_P95_SEC=3
 
-# --- Sensitive Action Refusal & Budget ---
-ESCALATED_OTP_THRESHOLD=1
-NORMAL_OTP_THRESHOLD=2
-CQ_MIN_REDFLAGS=6
-CQ_NO_DUPLICATE_WINDOW=2
-
-# --- Security & Privacy ---
-CORS_ORIGINS=*
-LOG_RETENTION_DAYS=180
-EVIDENCE_RETENTION_DAYS=365
-ENABLE_PII_REDACTION=true
-ADMIN_RBAC_ENABLED=true
-ADMIN_API_KEY=change-me-in-prod
-
-# --- API ---
-# Optional API key: if empty, authentication is disabled.
-API_KEY=
-
-# --- Redis / RQ ---
+# === Redis / RQ ===
 REDIS_URL=redis://localhost:6379/0
 RQ_QUEUE_NAME=callback
 
-# --- Detection thresholds ---
-SCAM_THRESHOLD=0.75
-MAX_CONTEXT_MESSAGES=10
-
-# --- Broken-flow controller knobs ---
-BF_ENABLED=true
-BF_MAX_TURNS=10
-BF_NO_PROGRESS_TURNS=3
-BF_REPEAT_LIMIT=2
-BF_SECONDARY_BOUNCE_LIMIT=1
-ALT_COOLDOWN_WINDOW=2
-ALT_SEMANTIC_WINDOW=5
-ALT_MAX_USES_IN_WINDOW=1
-OTP_PRESSURE_WINDOW=4
-OTP_PRESSURE_THRESHOLD=2
-
-# --- Registry refresh / intent map ---
-REGISTRY_TTL=60
-REGISTRY_OVERRIDES_KEY=registry:overrides
-REGISTRY_DYNAMIC_KEY=registry:dynamic
-REGISTRY_INTENT_MAP_KEY=registry:intent_map
-INTENT_MAP_REFRESH_SEC=60
-
-# --- Optional: LLM rephrase ---
-BF_LLM_REPHRASE=false
-
-# --- Optional: callback (final output) ---
-GUVI_CALLBACK_URL=
-CALLBACK_TIMEOUT_SEC=5
-
-# --- Optional: vLLM ---
-VLLM_BASE_URL=
-VLLM_API_KEY=
-VLLM_MODEL=Qwen/Qwen2.5-14B-Instruct-AWQ
-VLLM_REQUEST_TIMEOUT_SEC=8.0
-VLLM_CLIENT_BUDGET_SEC=24.0
-VLLM_MAX_RETRIES=2
+# (Add other existing envs as needed from app/settings.py)
