--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,20 @@
-name: CI
-
-on: [push, pull_request]
-
+name: Python CI
+on:
+  push:
+    branches: [ main ]
+  pull_request: {}
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/checkout @v4
+      - uses: actions/setup-python @v5
         with:
-          python-version: "3.9"
-      - name: Install dependencies
+          python-version: '3.11'
+      - name: Install deps
         run: |
-          pip install -r requirements.txt
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install pytest
       - name: Run tests
-        run: pytest
+        run: pytest -q
